# QMedia

./: .gitattributes  .gitignore  .gitmodules  README.md
Android/QMediaSDK/qmediasdk/jni/: AudioTargetAdapter.cpp  AudioTargetAdapter.h  CMakeLists.txt  JniUtils.cpp  JniUtils.h  MediaDescribe_Jni.cpp  MediaDescribe_Jni.h  MediaDescribe_jni.cpp  MediaDescribe_jni.h  MediaSourceAdapter.cpp  MediaSourceAdapter.h  QAudioFrame_Jni.cpp  QAudioFrame_Jni.h  QAudioTrackNode_Jni.cpp  QCombiner_Jni.cpp  QDuplicateNode_Jni.cpp  QEditorPlayer_Jni.cpp  QEditorPlayer_Jni.h  QEffectManage_Jni.cpp  QEffect_Jni.cpp  QExporter_Jni.cpp  QExporter_Jni.h  QGraphicNode_Jni.cpp  QImageNode_Jni.cpp  QLayer_Jni.cpp  QMediaDescribe_Jni.cpp  QMediaDescribe_Jni.h  QMediaFactory_Jni.cpp  QMediaFactory_Jni.h  QMediaTrack_Jni.cpp  QVideoFrame_Jni.cpp  (+7 more)
QMediaCore/: CMakeLists.txt  qmediacore.cpp
QMediaCore/EffectEditor/: CMakeLists.txt  DisplayLayer.cpp  DisplayLayer.h  EditorExporter.cpp  EditorExporter.h  EditorExporterImpl.cpp  EditorExporterImpl.h  EditorPlayer.cpp  EditorPlayer.h  EditorPlayerImpl.cpp  EditorPlayerImpl.h  EffectCombiner.cpp  EffectCombiner.h  MediaAudioChannel.cpp  MediaAudioChannel.h  MediaEngineImpl.cpp  MediaEngineImpl.h  MediaGraphicChannel.cpp  MediaGraphicChannel.h  MediaSegmentImpl.cpp  MediaSegmentImpl.h  MediaSegmentManager.cpp  MediaSegmentManager.h  MediaSessionImpl.cpp  MediaSessionImpl.h  MediaSessionPlayerImpl.cpp  MediaSessionPlayerImpl.h  MediaSource.h  MediaSupervisor.cpp  MediaSupervisor.h  MediaTrack.h  MediaTrackImpl.cpp  MediaTrackImpl.h  SegmentDecoder.cpp  SegmentDecoder.h  VideoFrameDrawer.h
QMediaCore/EffectEditor/medianode/: AudioRenderNodeImpl.cpp  AudioRenderNodeImpl.h  VideoGraphicNode.cpp  VideoGraphicNode.h  VideoRenderNodeImpl.cpp  VideoRenderNodeImpl.h
QMediaCore/EffectEditor/sequentail/: SequentailDecoder.cpp  SequentailDecoder.h  SequentailSlice.cpp  SequentailSlice.h
QMediaCore/EffectEditor/sources/: SoftwareFrameDrawer.cpp  SoftwareFrameDrawer.h  SoftwareSource.cpp  SoftwareSource.h
QMediaCore/GraphicCore/: AnimateNode.cpp  BaseNode.cpp  BaseNode.h  CMakeLists.txt  GcAnimaNode.cpp  GcAnimaNode.h  GcDuplicateNode.cpp  GcDuplicateNode.h  GcFilter.cpp  GcFilter.h  GcImageNode.cpp  GcImageNode.h  GcLayer.cpp  GcLayer.h  GcNode.cpp  GcNode.h  GcRenderNode.cpp  GcRenderNode.h  GcScene.cpp  GcScene.h  GcTextureNode.cpp  GcTextureNode.h  Layer2.cpp  Layer2.h  SceneNode.cpp  SceneNode.h
QMediaCore/GraphicCore/base/: ColorTypes.cpp  ColorTypes.h  Image.cpp  Image.h  Macros.h
QMediaCore/GraphicCore/effect/: Effect.h  EffectGroup.cpp  EffectGroup.h  EffectManage.cpp  EffectManage.h  FlashEffect.h
QMediaCore/GraphicCore/filter/: ColorInvertConfig.cpp  Filter.cpp  Filter.h  FilterConfig.cpp  FilterConfig.h  FilterDrawer.cpp  FilterDrawer.h  PolarPixellateConfig.cpp  SobelEdgeDetectionConfig.cpp  ToonConfig.cpp  WhiteBalanceConfig.cpp
QMediaCore/GraphicCore/math/: CCAffineTransform.cpp  CCGeometry.h  CCMathBase.h  MathUtil.cpp  MathUtil.h  Quaternion.cpp  Vec2.h  Vec2.inl  Vec3.h  Vec3.inl
QMediaCore/GraphicCore/opengl/: Drawable2D.cpp  Drawable2D.h  FrameBuffer.cpp  FrameBuffer.h  GLEngine.cpp  GLEngine.h  GLMacros.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram2.cpp  ShaderProgram2.h  Texture2D.cpp  Texture2D.h  Texture2DDrawer.cpp  Texture2DDrawer.h  TextureFrameBuffer.cpp  TextureFrameBuffer.h
QMediaCore/GraphicCore/texture_filter/: FilterFactory.cpp  FilterFactory.h  PolarPixellateFilter.cpp  PolarPixellateFilter.h
QMediaCore/MediaCore/: AudioClock.h  CMakeLists.txt  QPlayer.cpp  QPlayer.h
QMediaCore/MediaCore/audiocore/: AudioClock.h  AudioEffect.cpp  AudioEffect.h  AudioProcess.cpp  ResamplerSpeex.cpp  ResamplerSpeex.h
QMediaCore/MediaCore/core/: AudioFrame.cpp  AudioFrame.h  AudioProcess.h  CodecSpecificInfo.h  DecodedFrame.h  DecodedFrameQueue.h  EncodedPacket.h  MediaComm.h  MediaStream.cpp  MediaStream.h  ResamplerSpeex.cpp  ResamplerSpeex.h  SteadyClock.h  VideoFrame.h
QMediaCore/MediaCore/decoder/: AudioDecoder.h  Decoder.h  SequentailDecoder.cpp  SequentailDecoder.h  SoftwareDecoder.cpp  SoftwareDecoder.h  VideoDecoder.h
QMediaCore/MediaCore/demuxer/: Demuxer.h  GeneralDemuxer.cpp  GeneralDemuxer.h  Mp4Demuxer.cpp  Mp4Demuxer.h
QMediaCore/MediaCore/mediadef/: CodecSpecificInfo.h  EncodedPacket.h  MediaComm.h  VideoFrame.cpp  VideoFrame.h
QMediaCore/MediaCore/output/: AudioTarget.h  OutputTarget.h  VideoTarget.h
QMediaCore/MediaCore/protocol/: adts.h  avcc_parse.c  avcc_parse.h  bitstream.c  bitstream.h  fs_io.c  fs_io.h  golomb.h  h264_parse.c  h264_parse.h  hevc_parse.c  hevc_parse.h  hvcc_parse.c  hvcc_parse.h  sdp.h  sdp_decode.c  sdp_util.c
QMediaCore/RenderEngine/: AnimateNode.h  BaseNode.cpp  BaseNode.h  CMakeLists.txt  Layer2.cpp  Layer2.h  RenderScene.cpp  RenderScene.h  SceneNode.cpp  SceneNode.h
QMediaCore/RenderEngine/base/: Image.cpp  Image.h  color_types.cpp  color_types.h
QMediaCore/RenderEngine/effect/: Effect.h  EffectGroup.cpp  EffectGroup.h  EffectManage.cpp  EffectManage.h  FlashEffect.h
QMediaCore/RenderEngine/filter/: ColorInvertConfig.cpp  Filter.cpp  Filter.h  FilterConfig.cpp  FilterConfig.h  FilterDrawer.cpp  FilterDrawer.h  PolarPixellateConfig.cpp  SobelEdgeDetectionConfig.cpp  ToonConfig.cpp  WhiteBalanceConfig.cpp
QMediaCore/RenderEngine/math/: CCAffineTransform.h  CCGeometry.cpp  CCMathBase.h  Mat4.cpp  Mat4.h  Mat4.inl  MathUtil.cpp  Quaternion.h  Quaternion.inl  Vec2.cpp  Vec3.cpp  Vec4.cpp  Vec4.h  Vec4.inl
QMediaCore/RenderEngine/opengl/: Drawable2D.cpp  Drawable2D.h  Texture2DDrawer.cpp  Texture2DDrawer.h  TextureFrameBuffer.cpp  TextureFrameBuffer.h  frame_buffer_gl.cpp  frame_buffer_gl.h  gl_platform.h  render_device_gl.cpp  render_device_gl.h  shader_code.cpp  shader_code.h  shader_program_gl.cpp  shader_program_gl.h  texture2d_gl.cpp  texture2d_gl.h
QMediaCore/Utils/: BlockingQueue.h  CMakeLists.txt  Comm.h  ConditionVariable.h  Logger.cpp  Logger.h  PlatformConfig.h  ThreadTask.h  ThreadTaskFuture.h  Variant.h  bitstream.h  circle_buffer.h  rw_lock.h  spin_lock.h
(+618 files in other folders)
